# rust-backend

./: Cargo.toml  Makefile
src/: main.rs
templates/: index.html.hbs
